<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.description.DescriptionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textDescriptionMarca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/n_a"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDescriptionMarca">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="1dp"
                        android:background="#818181"
                        android:paddingStart="10dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:paddingEnd="0dp"
                        android:text="@string/modelo"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/textDescriptionModelo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="#CA4400"
                        android:padding="4dp"
                        android:text="@string/n_a"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="1dp"
                        android:background="@color/primary_light"
                        android:paddingStart="10dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="0dp"
                        android:paddingBottom="4dp"
                        android:text="@string/patente"
                        android:textStyle="bold"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/textDescriptionPatente"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="#EC7300"
                        android:padding="4dp"
                        android:text="@string/n_a"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="1dp"
                        android:background="#818181"
                        android:paddingStart="10dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:paddingEnd="0dp"
                        android:text="@string/motor"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textDescriptionMotor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="#CA4400"
                        android:padding="4dp"
                        android:text="@string/n_a"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="1dp"
                        android:background="@color/primary_light"
                        android:paddingStart="10dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="0dp"
                        android:paddingBottom="4dp"
                        android:text="@string/color"
                        android:textStyle="bold"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/textDescriptionColor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="#EC7300"
                        android:padding="4dp"
                        android:text="@string/n_a"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="1dp"
                        android:background="@color/grey"
                        android:paddingStart="10dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:paddingEnd="0dp"
                        android:text="@string/puertas"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textDescriptionPuertas"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="#CA4400"
                        android:padding="4dp"
                        android:text="@string/n_a"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/borrar"
            app:layout_constraintBottom_toTopOf="@+id/fabEdit"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/editar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>